--- a/decouvertepythonaudren/templates/index.html
+++ b/decouvertepythonaudren/templates/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{{author}}</title>	
+    <title>{{title}}</title>	
+    <link rel="stylesheet" href="style.css">
   </head>  
 
   <body>
-    <div id="banner">
-      <p class="lead">We're bringing {{name}} to the internet. Free.Cute. Awesome.</p>
-    </div>
+    <h1>Welcome to mediacenter !</h1>
     <form action="/signup" method="post">
-        <input type="text" name="email"></input>
-        <input type="submit" value="Signup"></input>
+        <input type="text" name="reseaux"></input>
+        <input type="submit" value="Ajouter"></input>
       </form>
     </form>
     </div>
