--- a/decouvertepythonaudren/templates/index.html
+++ b/decouvertepythonaudren/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>{{title}}</title>	
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>  
 
   <body>
@@ -11,7 +11,10 @@
     <form action="/signup" method="post">
         <input type="text" name="reseaux"></input>
         <input type="submit" value="Ajouter"></input>
-      </form>
+    </form>
+    <form action="/login" method="post">
+      <input type="text" name="user"></input>
+      <input type="submit" value="Se connecter"></input>
     </form>
     </div>
   </body>
