--- a/decouvertepythonaudren/templates/reseaux.html
+++ b/decouvertepythonaudren/templates/reseaux.html
@@ -7,7 +7,7 @@
     <p>Voici tous les réseaux que vous avez rentrés:</p>
     <ul>
       {% for reseaux in reseaux_user %}
-      <li>{{ reseaux }}</li>
+      <li>{{ reseaux[0] }}</li>
       {% endfor %}
     </ul>
     <p></p>
